--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
 </head>
 <body>
-  <!-- <h1>Snakeeeeee</h1>
+  <h1>Snakeeeeee</h1>
   <p>Hit an arrow key to start your snake in that direction!</p>
   <p>Try to eat the <span class="apple-font">apple</span>!</p>
   <p>If you hit the border you LOSE!</p>
-  <p>If you hit yourself you LOSE!</p> -->
+  <p>If you hit yourself you LOSE!</p>
   <canvas id="screen" width="500" height="500" style="border: 2px solid black">
     <script src="main.bundle.js"></script>
 
