--- a/index.html
+++ b/index.html
@@ -2,18 +2,25 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Game Time For Kyle & Mike</title>
+  <title>Game Time For Kyle and Mike</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
 </head>
 <body>
-  <h1>Snakeeeeee</h1>
+<div class = "start-screen" style="">
+  <h1>Snake!</h1>
+  <img src="images/awesome-snake-bite-photo.gif"><br>
+  <div id ="buttons">
+    <input id ="easy" type ="button" value="Easy">
+    <input id ="medium" type ="button" value="Medium">
+    <input id ="hard" type ="button" value="Hard">
+  </div>
+</div>
   <p>Hit an arrow key to start your snake in that direction!</p>
   <p>Try to eat the <span class="apple-font">apple</span>!</p>
   <p>If you hit the border you LOSE!</p>
   <p>If you hit yourself you LOSE!</p>
-  <canvas id="screen" width="500" height="500" style="border: 2px solid black">
+    <canvas id="screen" style="display:none;" width="500" height="500" style="border: 2px solid black">
     <script src="main.bundle.js"></script>
-
 </body>
 </html>
