added gameover screen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <input id ="hard" type ="button" value="Hard">
   </div>
 </div>
+<div id="gameOver" style="display: none; width: 200; height: 200; background-color: black;">
+  <h1>GAME OVER</h1>
+  <center><input id ="reset" type ="button" value="RESET"></center>
+</div>
   <p>Hit an arrow key to start your snake in that direction!</p>
   <p>Try to eat the <span class="apple-font">apple</span>!</p>
   <p>If you hit the border you LOSE!</p>
