--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <h1>GAME OVER</h1>
   <center><input id ="reset" type ="button" value="RESET"></center>
 </div>
+  <p>Select a difficulty!</p>
   <p>Hit an arrow key to start your snake in that direction!</p>
   <p>Try to eat the <span class="apple-font">apple</span>!</p>
   <p>If you hit the border you LOSE!</p>
